--- a/assets/templates/tv_show_grafics.html
+++ b/assets/templates/tv_show_grafics.html
@@ -2,6 +2,8 @@
     <div id="tabs_container" class="col-xs-12">
         <div ng-app="seriesAnalyzer" ng-controller="tvShowGraficsController">
 
+            TESTESTEST
+
             <div class="panel panel-default">
                 <div class="panel-heading">Overall Series Stats</div>
                 <div class="panel-body">
