removed overview tab

--- a/assets/templates/tv_show_grafics.html
+++ b/assets/templates/tv_show_grafics.html
@@ -1,5 +1,8 @@
 <div class="container-fluid full-height">
-    <div id="tabs_container" class="col-xs-12">
+    < id="tabs_container" class="col-xs-12">
+        
+        <img src="assets/img/banner.png"/>
+        
         <div ng-app="seriesAnalyzer" ng-controller="tvShowGraficsController">
 
             <div class="panel panel-default">
@@ -67,7 +70,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
