add autocomplete single speaker view

--- a/assets/templates/single_speaker_statistics.html
+++ b/assets/templates/single_speaker_statistics.html
@@ -8,6 +8,8 @@
                 <div class="panel-heading">Speaker Selection</div>
                 <div class="panel-body">
 
+                    <input auto-complete ui-items="dropdownSpeakerNames" ng-model="dropdownSelectedSpeaker"/>
+
                     <div class="row speaker-selection">
                         <div class="speaker-card">
                             <div class="speaker-label">Sheldon</div>
