--- a/assets/templates/tv_show_grafics.html
+++ b/assets/templates/tv_show_grafics.html
@@ -1,8 +1,6 @@
 <div class="container-fluid full-height">
-    < id="tabs_container" class="col-xs-12">
-        
-        <img src="assets/img/banner.png"/>
-        
+    <div id="tabs_container" class="col-xs-12">
+
         <div ng-app="seriesAnalyzer" ng-controller="tvShowGraficsController">
 
             <div class="panel panel-default">
