implemented hamming distances for speaker comparison

--- a/assets/templates/single_speaker_statistics.html
+++ b/assets/templates/single_speaker_statistics.html
@@ -8,7 +8,7 @@
                 <div class="panel-heading">Speaker Selection</div>
                 <div class="panel-body">
 
-                    <input auto-complete ui-items="dropdownSpeakerNames" ng-model="dropdownSelectedSpeaker"/>
+                    <input type="text"  auto-complete ui-items="dropdownSpeakerNames" ng-model="dropdownSelectedSpeaker"/>
 
                     <div class="row speaker-selection">
                         <div class="speaker-card">
