--- a/assets/templates/speaker-comparison.html
+++ b/assets/templates/speaker-comparison.html
@@ -221,7 +221,9 @@
                 </div>
             </div>
 
-            <div class="panel panel-primary" ng-if="selectedSpeaker[0].name != undefined">
+            <div class="well" ng-if="selectedSpeaker[0].name == undefined && selectedSpeaker[1].name == undefined">Please choose at least one of the speakers to show data!</div>
+
+            <div class="panel panel-primary" ng-if="selectedSpeaker[0].name != undefined || selectedSpeaker[1].name != undefined">
                 <div class="panel-heading">Speaker Stats</div>
                 <div class="panel-body">
                     <div class="row">
@@ -440,7 +442,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-default linechart-panel" ng-if="speakerSeasonStats">
+            <div class="panel panel-primary linechart-panel" ng-if="selectedSpeaker[0].speakerSeasonStats || selectedSpeaker[1].speakerSeasonStats">
                 <div class="panel-heading">Speaker Season Replic Stats</div>
                 <div class="panel-body">
 
@@ -461,7 +463,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-default linechart-panel" ng-if="speakerEpisodeStats">
+            <div class="panel panel-primary linechart-panel" ng-if="speakerEpisodeStats">
                 <div class="panel-heading">Speaker Episode Replic Stats</div>
                 <div class="panel-body">
 
